--- a/svelte-course/package.json
+++ b/svelte-course/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "myapp",
+	"name": "svelte-course",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"autoprefixer": "^10.4.16",
+		"daisyui": "^3.7.7",
 		"postcss": "^8.4.30",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
