--- a/svelte-course/package.json
+++ b/svelte-course/package.json
@@ -22,5 +22,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.6"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"firebase": "^10.4.0",
+		"firebase-admin": "^11.10.1"
+	}
 }
